<resources>
    <string name="app_name">BriskMind</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="enroll">Student Enrollment</string>
    <string name="enrollment">Enter Enrollment Number</string>
    <string name="enrollment_number">Enrollment Number :</string>
    <string name="pwd">Enter Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_account">Sign in your NSDC Account.</string>
    <string name="sign_in_assessor">Sign In as Assessor</string>
    <string name="sign_in_student">Sign In as Student</string>
    <string name="skip">Skip</string>
    <string name="starttest">Start Test</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="studentLoginMsg">We are downloading your batch data.</string>
    <string name="student_id_image">Student ID Image</string>
    <string name="student_list">Student List</string>
    <string name="savenext">Save &amp; next</string>
    <string name="search_menu_title">Search</string>
    <string name="sector">Select Sector</string>
    <string name="launch_camera">Tap to Launch Camera</string>
    <string name="library_roundedimageview_author">Vince Mi</string>
    <string name="library_roundedimageview_authorWebsite">https://github.com/vinc3m1</string>
    <string name="library_roundedimageview_isOpenSource">true</string>
    <string name="library_roundedimageview_libraryDescription">A fast ImageView (and Drawable) that supports rounded corners (and ovals or circles) based on the original example from Romain Guy.</string>
    <string name="library_roundedimageview_libraryName">RoundedImageView</string>
    <string name="library_roundedimageview_libraryVersion">1.3.0</string>
    <string name="library_roundedimageview_libraryWebsite">https://github.com/vinc3m1/RoundedImageView</string>
    <string name="library_roundedimageview_licenseId">apache_2_0</string>
    <string name="library_roundedimageview_repositoryLink">https://github.com/vinc3m1/RoundedImageView.git</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">%1$s o\'clock</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="submit_id">Submit your ID</string>
    <string name="submit_identity">Submit your Identity</string>
    <string name="syncBatchMsg">We are synchronizing your assessed batch data to server. Request you to please don\'t close or kill the app otherwise data may be lost.</string>
    <string name="syncMessageNote">Your test is not submitted to the server, Kindly click on sync button.</string>
    <string name="termscondition">I have read and understood the instructions. I agree that in case of not adhering to the exam instructions, I will be disqualified from giving the exam.</string>
    <string name="test_status">Start</string>
    <string name="test_status_txt">Theory Test Status</string>
    <string name="testlock">Test Unlock</string>
    <string name="theory">Theory</string>
    <string name="theoryTestJsonError">Theory Test Json Data is not available because batch is expired or test is not assigned properly! Please contact to Assessor Body.</string>
    <string name="theoryTestSubmitMsg">We are synchronizing your test data to server. Request you to please don\'t close or kill the app otherwise data may be lost.</string>
    <string name="time">02:30:12</string>
    <string name="videoCompressCancelError">Because of some error video compression is cancelled.</string>
    <string name="yes">Yes</string>
    <string name="inform_verify">We Need to Verify your Information Please Submit the Document Below to Process your Application.</string>
    <string name="internetSyncError">Please connect to the internet for syncing the data to server.</string>
    <string name="item_view_role_description">Tab</string>
    <string name="student_name_txt">Student Name</string>
    <string name="student_profile_image">Student Profile Image</string>
    <string name="studentfeedback">Student Feedback</string>
    <string name="submitTestNote">Thank You for Submitting the Test</string>
    <string name="imge_change">Change or Remove</string>
    <string name="profile_image">Assessor Profile Image</string>
    <string name="id_image">Assessor ID Image</string>
    <string name="assessor">Enter Assessor Code</string>
    <string name="assessor_change">Assessor login Image</string>
    <string name="assessor_id">Assessor ID</string>
    <string name="assessor_name">Assessor Name</string>
    <string name="assignedBatchExpired">Assinged Batch is expired.</string>
    <string name="batchDateExpired">Batch Expired or Test Assign Issue</string>
    <string name="batch_name">Today’s Batch Name One same address as mentioned on SDMS</string>
    <string name="batchimages">Batch Images</string>
    <string name="batchimages1">Group Image</string>
    <string name="batchimages2">Banner Image</string>
    <string name="batchimages3">Center Image</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="comment">Comment</string>
    <string name="assesor_feedback">Assessor feedback</string>
    <string name="assessment_date">Assessment Date :</string>
    <string name="assessment_datevalue">12 Dec 2019</string>
    <string name="practicalSubmitMsg">We are synchronizing your student practical data to server. Request you to please don\'t close or kill the app otherwise data may be lost.</string>
    <string name="practicalTestJsonError">Practical Test Json Data is not available because batch has reached the end date or test is not assigned properly! Please contact to Assessor Body.</string>
    <string name="practical_test_status">Practical Test Status</string>
    <string name="practical_type">Tyre Fitter Practical same address as mentioned on</string>
    <string name="Instruction">INSTRUCTION</string>
    <string name="attempted_question">Attempted Question</string>
    <string name="skipped_question">Skipped Question</string>
    <string name="review_question">Review Question</string>
    <string name="review_attempt_question">Review With Attempt</string>
    <string name="ongoing_question">Ongoing Question</string>
    <string name="question_remaining">Question Remaining</string>
    <string name="tap_launch_camera">Tap to Launch Camera</string>
    <string name="student_enrollment">Student Enrollment</string>
    <string name="assessor_code">Enter Assessor Code</string>
    <string name="assessor_login_image">Assessor Login Image</string>
    <string name="start_batch">Start Batch</string>
    <string name="remove_batch">Remove Batch</string>
    <string name="submit">Submit</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="question_no">Question no.</string>
    <string name="save_amp_next"><![CDATA[Save & Next]]></string>
    <string name="assessor_id_image">Assessor Id Image</string>
    <string name="assessor_profile_image">Assessor Profile Image</string>
    <string name="submit_test">Submit Test</string>
    <string name="assistance_technician_cctv">Assistance Technician CCTV...</string>
    <string name="_01_57_00">01:57:00</string>
    <string name="todo">TODO</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="enter_mobile_no">Enter Mobile No.</string>
    <string name="enter_address">Enter Address</string>
    <string name="remarks">Remark</string>
    <string name="sync_batch">Sync Batch</string>
</resources>