<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">

        <LinearLayout
            android:id="@+id/image_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/Assessor_id_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Assessor Login Image"
                    android:textColor="@color/assessor_txt_color"
                    android:textSize="10sp" />

                <RelativeLayout
                    android:id="@+id/id_image_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="18sp"
                    android:padding="15dp">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/assessor_login_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:background="@drawable/assessor_id_image"
                        android:scaleType="centerCrop"
                        app:riv_corner_radius="22dp"
                        app:riv_oval="false" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/change_remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="18sp"
                    android:text="@string/launch_camera"
                    android:textColor="@color/assessor_txt_color"
                    android:textSize="10dp" />
            </LinearLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/submit_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="110dp"
            android:lineSpacingExtra="0sp"
            android:text="@string/submit_id"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/verify_inform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/submit_id"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:gravity="center"
            android:lineSpacingExtra="0sp"
            android:text="@string/inform_verify"
            android:textColor="@color/assessor_txt_color"
            android:textSize="12sp" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardSaveNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/app_theme"
            app:cardCornerRadius="@dimen/activity_margin_5dp"
            app:cardUseCompatPadding="true"
            app:cardElevation="@dimen/activity_margin_2dp"
            android:layout_below="@+id/verify_inform"
            android:layout_marginStart="80sp"
            android:layout_marginTop="30sp"
            android:layout_marginEnd="80sp"
            android:layout_centerHorizontal="true"
            android:foreground="?android:attr/selectableItemBackground">

            <TextView
                android:id="@+id/save_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:text="@string/save_amp_next"
                android:textSize="12sp"
                android:padding="@dimen/activity_margin_10dp"/>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</ScrollView>
